--- a/Net-DHCP-Config-Utilities/Changes
+++ b/Net-DHCP-Config-Utilities/Changes
@@ -1,5 +1,4 @@
 Revision history for Net-DHCP-Config-Utilities
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
-
+0.0.1	 2019-11-11/04:00
+		 - Initial release.
